Changes since version 1.5.1
---------------------------

- The documentation has always stated that same-named constructs
  cannot be directly nested inside each other. (For example, a
  module `M' cannot contain a constant named `M'. The slice2cpp
  compiler did not enforce this correctly up to now for modules
  containing constructs with the same name as the enclosing module.
  This has been fixed and now results in a diagnostic.

- The slice2cpp compiler now deprecates Slice definitions at global
  scope: only modules can be defined at global scope. Everything else
  (constants, classes, interfaces, etc.) must be defined inside a
  module.

  For the time being, the compiler issues a warning for each global
  definition but continues to compile the code. Global non-module
  definitions will elicit a hard error two releases from now.

- Several demos used Slice classes where interfaces were more
  appropriate. This has been fixed.

- Fixed a bug in the Windows IcePack registry project that would 
  cause a compilation error if the registry was compiled before the
  node.

- Fixed a hang in the IcePack registry that would occur if multiple
  node were started simultaneously.

- Added new properties Ice.StdErr and Ice.StdOut to redirect the
  standard error and output streams of a process. Reimplemented
  IcePack's error/output redirection using these properties.

Changes since version 1.5.0
---------------------------

- The relevant Windows project files were fixed to generate Slice
  checksums.

- Fixed harmless warnings emitted by the IcePatch client.

- Fixed a bug in IceStorm that caused a subscriber to no longer
  receive events after unsubscribing and resubscribing to the same
  topic.

- Fixed a bug in the slice2cs code generator: classes with multiple
  sequence members caused incorrect code to be generated.

- Added work-around for clients "hanging" at exit when using IcePack
  on Windows.

Changes since version 1.4.0
---------------------------
